# mosto

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml
core/src/: db.rs  lib.rs  util.rs
core/src/brewday/: mod.rs  model.rs  store.rs
core/src/equipment/: mod.rs  model.rs  seed.rs  store.rs
core/src/inventory/: mod.rs  model.rs  seed.rs  store.rs
core/src/recipes/: mod.rs  model.rs  seed.rs  store.rs
desktop/: Cargo.toml  tauri.conf.json
desktop/icons/: icon.icns
desktop/src/: main.rs  state.rs
desktop/src/commands/: brewday.rs  equipment.rs  inventory.rs  mod.rs  recipes.rs
docker/: config.toml  entrypoint.sh
migrations/: 0001_recipes.sql  0002_inventory.sql  0003_equipment.sql  0004_brew_sessions.sql  0005_auth.sql
scripts/: bump-version.sh  check-version-sync.sh
server/: .env.example  Cargo.toml  config.toml
server/src/: config.rs  main.rs  spa.rs  state.rs
server/src/auth/: handlers.rs  mod.rs  model.rs  password.rs  rate_limit.rs  session.rs  store.rs
server/src/brewday/: handlers.rs  mod.rs
server/src/equipment/: handlers.rs  mod.rs
server/src/inventory/: handlers.rs  mod.rs
server/src/recipes/: handlers.rs  mod.rs
web/: .gitignore  .typesafe-i18n.json  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: main.tsx
web/src/domain/: client.ts  index.ts
web/src/domain/brewday/: index.ts
web/src/domain/recipe/: index.ts
web/src/features/brewday/: batch-timeline.tsx  brewing-page.module.css  brewing-page.tsx  brewing-sidebar-widget.module.css  brewing-sidebar-widget.tsx  completion-card.tsx  format.ts  gravity-log.module.css  gravity-log.tsx  hop-schedule.module.css  hop-schedule.tsx  index.ts  now-card.module.css  now-card.tsx  steps-list.module.css  steps-list.tsx  steps.ts  timer.tsx  use-timer.ts  yeast-calc-panel.module.css  yeast-calc-panel.tsx  yeast-calc.ts
web/src/features/conversions/: abv-calc.tsx  calc-card.module.css  calc-card.tsx  calc-field.tsx  calculations.ts  color-calc.module.css  color-calc.tsx  conversions-page.tsx  gravity-calc.tsx  index.ts  stat-tile.module.css  temperature-calc.tsx  volume-calc.tsx  water-calc.tsx  weight-calc.tsx
web/src/features/dashboard/: index.ts  (+13 more)
web/src/i18n/: i18n-types.ts
web/src/routes/: __root.tsx  _app.tsx  login.module.css  login.tsx
web/src/theme/: colors.ts  index.ts
(+89 files in other folders)
