[package]
name = "brewday-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
tokio = { version = "1", features = ["rt", "macros"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
