[package]
name = "mosto-desktop"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mosto-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "mosto-desktop"
path = "src/main.rs"
