[package]
name = "mosto-server"
version.workspace = true
edition.workspace = true
default-run = "mosto-server"

[[bin]]
name = "mosto-server"
path = "src/main.rs"

[dependencies]
mosto-core = { path = "../core" }
argon2 = "0.5.3"
axum = "0.8.9"
axum-extra = { version = "0.10.1", features = ["cookie"] }
dotenvy = "0.15.7"
hex = "0.4.3"
rand = "0.8.5"
rust-embed = { version = "8.5.0", features = ["mime-guess"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.9"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
toml = "1"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.7.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
